Minor modifications, including adding some corrected spacing

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ h1 {
 	background-color: var(--white);
 	text-align: center;
 	width: 100%;
+	padding-bottom: 2em;
 }
 
 #servicesCarouselContainer {
@@ -112,6 +113,7 @@ h1 {
 	background-color: var(--pampas);
 	text-align: center;
 	width: 100%;
+	padding-bottom: 2em;
 }
 
 #aboutmeContent {
@@ -123,6 +125,11 @@ h1 {
 
 #aboutmeText {
 	width: 50%;
+	margin-right: 3em;
+}
+
+#aboutmeContent .card-title {
+	color: var(--sanddune);
 }
 
 /*
